css: Fix weird bug related to post-list-view overlap.

--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -98,7 +98,7 @@ body {
 
 #search-container {
     width: 100%;
-    height: 45px;
+    height: 60px;
 }
 
 #search-box {
@@ -106,7 +106,7 @@ body {
     height: 30px;
     margin: 5%;
     margin-top: 15px;
-    margin-bottom: 0px;
+    margin-bottom: 15px;
     background: #eee;
     border-radius: 10px;
     border-width: 0;
@@ -119,6 +119,7 @@ body {
     width: 100%;
     flex-grow: 1;
     overflow-y: hidden;
+    display: flex;
 }
 
 #post-title-list {
@@ -145,6 +146,7 @@ body {
     display: flex;
     flex-shrink: 0;
     cursor:pointer;
+    margin-top: 0px;
 }
 
 #post-title-list li:first-of-type {
